@@ -1,5 +1,17 @@
 2012-05-23  Filip Pizlo  <fpizlo@apple.com>
 
+        Use after free in JSC::DFG::ByteCodeParser::processPhiStack
+        https://bugs.webkit.org/show_bug.cgi?id=87312
+        <rdar://problem/11518848>
+
+        Reviewed by Oliver Hunt.
+
+        * dfg/DFGByteCodeParser.cpp:
+        (JSC::DFG::ByteCodeParser::processPhiStack):
+        (JSC::DFG::ByteCodeParser::parse):
+
+2012-05-23  Filip Pizlo  <fpizlo@apple.com>
+
         It should be possible to make C function calls from DFG code on ARM in debug mode
         https://bugs.webkit.org/show_bug.cgi?id=87313
 
